tests/bad-configs/inconsistent-volume.errors
ERROR: inconsistent-volume.config:3: inconsistent indentation
