tests/bad-configs/inconsistent-volume.config
host alpha
    volume root /
   volume home /home
